# nami

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  pyproject.toml
app/: config.py  main.py
data/: historical_events.yaml
docs/: backdated-case-studies.md  backtest_results.md  cost-controls.md  engine-replay-validation.md  llm-system-design.md  methodology.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
scripts/: case_studies_output.json  engine_replay_output.json  live_evals_snapshot.json  refresh_sample_weights.py  run_case_studies.py  run_engine_replay.py  run_quant_challenger.py  snapshot_live_evals.py
tests/: conftest.py  test_adjust_manual.py  test_adjust_prompt.py  test_agent_docs.py  test_analogs.py  test_analogs_backdating.py  test_api.py  test_api_adjust.py  test_api_errors.py  test_api_profile.py  test_api_saved.py  test_attribution.py  test_auth.py  test_calendar.py  test_engine_replay.py  test_factors.py  test_firestore_store.py  test_fx.py  test_hashing.py  test_health.py  test_live_evals.py  test_market_data_integrity.py  test_marking.py  test_metering.py  test_methodology_worked_example.py  test_narrative_shapley.py  test_observability.py  test_portfolio_validation.py  test_prompts.py  test_quant_challenger.py  test_quant_contracts.py  test_quant_exposure.py  test_quant_inputs.py  test_quant_pipeline.py  test_quant_scenario.py  test_quant_sources.py  test_ratelimit.py  test_scenario.py  (+8 more)
(+197 files in other folders)
