[project]
name = "nami"
version = "0.1.0"
description = "LLM-driven scenario explorer for equity portfolios"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ryan Seet" },
]
dependencies = [
    "fastapi>=0.115",
    "google-cloud-aiplatform>=1.70",
    "google-cloud-storage>=2.18",
    "google-cloud-secret-manager>=2.20",
    "google-cloud-firestore>=2.20",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26,<2.3",
    "statsmodels>=0.14",
    "pyarrow>=17.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "google-genai>=2.0,<3.0",
    "shap>=0.46,<1.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.0",
    "httpx>=0.27",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RET"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
